@@ -1,3 +1,7 @@
+2003-04-29  Kjartan Maraas  <set EMAIL_ADDRESS environment variable>
+
+	* capplet-dir.c: (read_entries): Plug a couple of leaks.
+
 Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* Release 2.2.0.1
